force-app/main/default/objects/POS_Price__c/POS_Price__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track active and historical pricing for a particular product that will be used for POS Revenue calculations within SuRF and other related reporting such as SQL and Excel Queries.
Jira #SDS-2787</description>
    <label>POS Price</label>
    <nameField>
        <displayFormat>POSP-{0}</displayFormat>
        <label>POS Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>