force-app/main/default/objects/POS_Price__c/fields/POS_Price__c.field-meta.xml
<CustomField>
    <fullName>POS_Price__c</fullName>
    <description>Name changes from Price to POS_Price as per SDS #SDS-3115. Changes done on April 13th, 2021</description>
    <label>POS Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>