force-app/main/default/objects/POS_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>POS Prices</relationshipLabel>
    <relationshipName>POS_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>